--- a/src/android/res/layout/camera_overlay.xml
+++ b/src/android/res/layout/camera_overlay.xml
@@ -13,7 +13,7 @@
         android:layout_centerVertical="true" />
 
     <org.apache.cordova.engine.SystemWebView
-        android:id="@+id/cordovaWebView"
+        android:id="@+id/cordova_web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
